crates/pixi_manifest/src/snapshots/pixi_manifest__discovery__test__workspace_discoverer@3tier-resolution-pyproject.snap
---
source: crates/pixi_manifest/src/discovery.rs
expression: snapshot
---
Discovered workspace at: 3tier-resolution-pyproject/pyproject.toml
- Name: explicit-package-name
Package: explicit-package-name @ 2.0.0
