crates/pixi_manifest/src/snapshots/pixi_manifest__discovery__test__workspace_discoverer@3tier-resolution-separate_package-dir.snap
---
source: crates/pixi_manifest/src/discovery.rs
expression: snapshot
---
Discovered workspace at: 3tier-resolution-separate/pyproject.toml
- Name: separate-workspace
Package: package-default-name @ 3.0.0
