crates/pixi_manifest/src/snapshots/pixi_manifest__discovery__test__workspace_discoverer@nested-pyproject-workspace_nested-pyproject.snap
---
source: crates/pixi_manifest/src/discovery.rs
expression: snapshot
---
  × missing field 'name' in table
   ╭─[<CARGO_ROOT>/tests/data/workspace-discovery/nested-pyproject-workspace/nested-pyproject/pyproject.toml:5:1]
 4 │
 5 │ [tool.pixi.package]
   · ────────────────────
 6 │ # name etc should be derived from the project itself
 7 │
   ╰────
