crates/pixi_manifest/src/snapshots/pixi_manifest__discovery__test__workspace_discoverer@non-existing.snap
---
source: crates/pixi_manifest/src/discovery.rs
expression: snapshot
snapshot_kind: text
---
  × cannot canonicalize path '/Users/rubenarts/dev/pixi/tests/data/workspace-discovery/non-existing' while searching for a manifest.
  ╰─▶ No such file or directory (os error 2)
